feat: Allow to force update the internal cache (#1878)
